# HiDream_O1-ComfyUI

./: README.md  README_ZH.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
docs/: HIDREAM_O1_TRAINING.md
example_workflows/: HiDream_O1_I2I_example_workflow.json  HiDream_O1_T2I_example_workflow.json  HiDream_O1_example_workflow_and_LoRa.json
hidream_o1/: __init__.py  comfy_runtime.py  compat.py
hidream_o1/models/: __init__.py  pipeline.py  qwen3_vl_transformers.py  seam_smoothing.py  utils.py
hidream_o1/training/: __init__.py  dataset.py  lora.py  trainer.py
