[project]
name = "HiDream_O1-ComfyUI"
description = "ComfyUI custom nodes for HiDream O1 Image generation with reference images, BF16/FP16/FP8 loading, FlashAttention, SageAttention, and DynamicVRAM support"
version = "0.2.1"
license = {file = "LICENSE"}
dependencies = [
    "accelerate",
    "diffusers",
    "einops",
    "huggingface_hub",
    "numpy",
    "pillow",
    "safetensors",
    "scipy",
    "torch",
    "torchvision",
    "tqdm",
    "transformers>=4.57.1",
    "typing_extensions",
]

[project.urls]
Repository = "https://github.com/Saganaki22/HiDream_O1-ComfyUI"

[tool.comfy]
PublisherId = "saganaki22"
DisplayName = "HiDream O1"
Icon = "https://avatars.githubusercontent.com/u/84208527"
